tests/paczka1/small_fuzzy/44237451.err
Error in line 1: nwps S191 17,8
Error in line 8: XwoJh8Mpm S822 35,3
Error in line 6: bcsgS S822 56,0
Error in line 12: bcsgS A633 55,8
Error in line 4: x23AzSSjBf S822 14,0
